2011/7/5 : Takuya Murakami
	* バイブレータ機能追加