@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.tmurakam.presentationtimer"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="false">
-        <activity android:name=".MainActivity"
-                  android:label="@string/app_name"
-                  android:configChanges="keyboardHidden|orientation">
+    package="org.tmurakam.presentationtimer"
+    android:versionCode="2"
+    android:versionName="1.1" >
+
+    <uses-sdk
+        android:minSdkVersion="7"
+        android:targetSdkVersion="10" />
+
+    <supports-screens
+        android:anyDensity="false"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:resizeable="true"
+        android:smallScreens="true" >
+    </supports-screens>
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity
+            android:name=".MainActivity"
+            android:configChanges="keyboardHidden|orientation"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-	    <activity android:name=".PrefActivity" android:label="@string/preferences"/>
-	    <activity android:name=".TimeSetActivity" android:label="Set time" android:theme="@android:style/Theme.Dialog"/>
-	    <activity android:name=".InfoActivity"/>
+        <activity
+            android:name=".PrefActivity"
+            android:label="@string/preferences" />
+        <activity
+            android:name=".TimeSetActivity"
+            android:label="Set time"
+            android:theme="@android:style/Theme.Dialog" />
+        <activity android:name=".InfoActivity" />
     </application>
-    <uses-sdk android:minSdkVersion="4" />
-<supports-screens android:normalScreens="true" android:largeScreens="true" android:smallScreens="true" android:resizeable="true" android:anyDensity="false"></supports-screens>
-</manifest> 
+
+</manifest>
