@@ -1,13 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
-  android:layout_height="fill_parent" android:layout_width="fill_parent" android:background="#ddd" android:gravity="center_horizontal" android:orientation="vertical">
-<ImageView android:id="@+id/ImageView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/icon" android:layout_marginTop="10dip"></ImageView><TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textSize="12pt" android:textColor="#000" android:layout_marginTop="15dip" android:id="@+id/TextAppName" android:text="Presentation Timer"></TextView>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:background="#ddd"
+    android:gravity="center_horizontal"
+    android:orientation="vertical" >
 
-<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000" android:id="@+id/TextVersion" android:text="Version  xxxxx" android:textSize="8pt" android:layout_marginTop="5dip" android:layout_weight="0.4"></TextView>
+    <ImageView
+        android:id="@+id/ImageView01"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:src="@drawable/icon" >
+    </ImageView>
 
+    <TextView
+        android:id="@+id/TextAppName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dip"
+        android:text="Presentation Timer"
+        android:textColor="#000"
+        android:textSize="12pt" >
+    </TextView>
 
-<TextView android:id="@+id/TextView02" android:layout_width="wrap_content" android:layout_height="wrap_content" android:textColor="#000" android:text="Copyright (C) 2008-2010, Takuya Murakami" android:textSize="6pt"></TextView>
-<TextView android:id="@+id/TextView03" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dip" android:textSize="5pt" android:layout_weight="0.6"></TextView>
-<Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Show help in browser" android:layout_marginBottom="20dip" android:onClick="onClickHelp"></Button>
+    <TextView
+        android:id="@+id/TextVersion"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dip"
+        android:layout_weight="0.4"
+        android:text="Version  xxxxx"
+        android:textColor="#000"
+        android:textSize="8pt" >
+    </TextView>
+
+    <TextView
+        android:id="@+id/TextView02"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Copyright (C) 2008-2012, Takuya Murakami"
+        android:textColor="#000"
+        android:textSize="6pt" >
+    </TextView>
+
+    <TextView
+        android:id="@+id/TextView03"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dip"
+        android:layout_weight="0.6"
+        android:textSize="5pt" >
+    </TextView>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dip"
+        android:onClick="onClickHelp"
+        android:text="Show help in browser" >
+    </Button>
+
 </LinearLayout>
