@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <string name="app_name">プレゼンタイマ</string>
     <string name="start">開始</string>
     <string name="pause">停止</string>
     <string name="reset">リセット</string>
     <string name="use_as_end_time">プレゼン終了時刻として使用</string>
-    <string name="help_url">http://android.tmurakam.org/presentationTimer/index-ja.html</string>
+    <string name="help_url">http://apps.tmurakam.org/presentationTimer/index.html</string>
     <string name="_1bell_time">1鈴時間</string>
     <string name="_2bells_time">2鈴時間</string>
     <string name="_3bells_time">3鈴時間</string>
-<string name="preferences">設定</string>
-<string name="help">ヘルプ</string>
-<string name="end_time">終了時刻</string>
-<string name="hours">時間</string>
-<string name="minutes">分</string>
+    <string name="preferences">設定</string>
+    <string name="help">ヘルプ</string>
+    <string name="end_time">終了時刻</string>
+    <string name="hours">時間</string>
+    <string name="minutes">分</string>
+
 </resources>
