@@ -1,2 +1,6 @@
+2012/02/14 : Takuya Murakami
+	* バグ修正: Android 4.0 で文字が正しい位置に出ないことがある。
+	* 音量をマスターボリュームで変更できるようにした
+
 2011/7/5 : Takuya Murakami
 	* バイブレータ機能追加
